# ComfyUI-FireRedTTS

./: AILab_FireRedTTS.py  README.md  README_zh.md  pyproject.toml  requirements.txt
fireredtts2/: fireredtts2.py
fireredtts2/codec/: audio.py  decoder.py  model.py  rvq.py  utils.py  whisper.py
fireredtts2/llm/: llm.py  modules.py  utils.py
fireredtts2/utils/: spliter.py
