[project]
name = "ComfyUI-FireRedTTS"
description = "A ComfyUI integration for FireRedTTS2, providing high-quality dialogue and monologue speech synthesis capabilities."
version = "0.1.0"
license = {file = "LICENSE"}

dependencies = ["huggingface-hub>=0.19.0", "transparent-background>=1.1.2", "segment-anything>=1.0", "groundingdino-py>=0.4.0", "opencv-python>=4.7.0", "onnxruntime>=1.15.0", "onnxruntime-gpu>=1.15.0", "protobuf>=3.20.2,<6.0.0", "hydra-core>=1.3.0", "omegaconf>=2.3.0", "iopath>=0.1.9"]
    
[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-FireRedTTS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-FireRedTTS"
Icon = ""